src/objects/loan__Family_Employment_Details__c.object
<CustomObject>
    <fields>
        <fullName>loan__Client__c</fullName>
        <label>Client</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Family Employment Details</relationshipLabel>
        <relationshipName>Family_Employment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Family_Members_Name__c</fullName>
        <label>Family Members Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Family Employment Details</relationshipLabel>
        <relationshipName>Family_Employment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Relationship_with_Client__c</fullName>
        <label>Relationship with Client</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Salary_Income__c</fullName>
        <label>Salary / Income</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Contribution_from_family_members__c</fullName>
        <inlineHelpText>Total Contribution from family members (D)</inlineHelpText>
        <label>Total Contribution from family members</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Type_of_Employment__c</fullName>
        <label>Type of Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Salaries</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily earner / Labour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Family Employment Details</label>
    <nameField>
        <displayFormat>FEDID-{0000000000}</displayFormat>
        <label>Family Employment Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Employment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>